data/all_generated_tests/raw_wast_tests/br_if_IncorrectBranchTargetResolution_1400.wast
;; 1. **Test Description**: Create a nested structure with a `block` enclosing a `loop`, then use `br_if` to conditionally target the `block`. Check if the correct branch is taken.    - **Constraint Checked**: Label referencing and correct target resolution for forward jumps.    - **Related Issue**: Ensure that `br_if` properly targets the `block` label when referencing relative positions.

(assert_invalid
  (module
    (func $incorrect_br_if (block (result i32) (loop (result i32) (br_if 0 (i32.const 1)))) (i32.const 0))
  )
  "type mismatch"
)